; ModuleID = '/home/carl/AnghaBench/zstd/tests/extr_decodecorpus.c_RAND_bufferMaxSymb.c'
source_filename = "/home/carl/AnghaBench/zstd/tests/extr_decodecorpus.c_RAND_bufferMaxSymb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i64, i32)* @RAND_bufferMaxSymb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @RAND_bufferMaxSymb(i32* %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = bitcast i8* %11 to i64*
  store i64* %12, i64** %10, align 8
  store i64 0, i64* %9, align 8
  br label %13

13:                                               ; preds = %27, %4
  %14 = load i64, i64* %9, align 8
  %15 = load i64, i64* %7, align 8
  %16 = icmp ult i64 %14, %15
  br i1 %16, label %17, label %30

17:                                               ; preds = %13
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @RAND(i32* %18)
  %20 = load i32, i32* %8, align 4
  %21 = add nsw i32 %20, 1
  %22 = srem i32 %19, %21
  %23 = sext i32 %22 to i64
  %24 = load i64*, i64** %10, align 8
  %25 = load i64, i64* %9, align 8
  %26 = getelementptr inbounds i64, i64* %24, i64 %25
  store i64 %23, i64* %26, align 8
  br label %27

27:                                               ; preds = %17
  %28 = load i64, i64* %9, align 8
  %29 = add i64 %28, 1
  store i64 %29, i64* %9, align 8
  br label %13

30:                                               ; preds = %13
  ret void
}

declare dso_local i32 @RAND(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
